--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <button onclick="changeValue('subtract')">Subtract</button>
   <button onclick="changeValue('multiply')">Multiply</button>
   <button onclick="changeValue('divide')">Divide</button>
-  <button onclick="changeValue('modulo')">Modulo</button>   
-
-
+  <button onclick="changeValue('modulo')">Modulo</button>
+  <button onclick="changeValue('three')">Three</button>
   <p id="result"></p>
   <br><br><br><br>
   <p>Bonus: Find num1 and num2 by pressing buttons only!</p>
